...
                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="endButtonTapped:" destination="-1" eventType="touchUpInside" id="db9-Ak-JPD"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ala-vS-Hi1" userLabel="Call">
                            <rect key="frame" x="157" y="10" width="80" height="80"/>
                            <color key="backgroundColor" red="0.0" green="0.75294117647058822" blue="0.54509803921568623" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="80" id="1Wf-LL-iEp"/>
                                <constraint firstAttribute="width" constant="80" id="EHD-ag-cGV"/>
                            </constraints>
...
                                </switch>
                            </subviews>
                        </stackView>
                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="nng-Qq-kgJ" userLabel="Mute / Unmute">
                            <rect key="frame" x="128" y="0.0" width="118" height="62"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mute" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RR2-e1-aaF">
                                    <rect key="frame" x="39.5" y="0.0" width="39" height="31"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Bzm-fY-keM">
...
